Bug 344396 domi crashes inspecting something [@ nsBindingManager::GetContentListFor] r=jst sr=jst